# SWARM

./: .gitattributes  .gitignore  .gitmodules  Development.docx  Documentation.docx  README.md
RPGVTT/: CMakeLists.txt  vcpkg.json
RPGVTT/include/: Window.hpp
RPGVTT/include/Core/: Window.hpp
RPGVTT/src/: Window.cpp  main.cpp
RPGVTT/src/Core/: Window.cpp  main.cpp
SWARM/: CMakeLists.txt  CMakePresets.json  vcpkg.json
SWARM/include/: Camera.hpp  Components.hpp  Constants.hpp  Input.hpp  Mesh.hpp  Renderer.hpp  Scene.hpp  Transform.hpp
SWARM/include/Core/: Window.hpp
SWARM/include/components/: Entity.hpp  MeshRenderer.hpp  Tag.hpp  Transform.hpp
SWARM/shaders/: IndexShader.hlsl  VertexShader.hlsl
SWARM/src/: Camera.cpp  Input.cpp  Mesh.cpp  Renderer.cpp  main.cpp
SWARM/src/Core/: Window.cpp  main.cpp
